--- a/arduino-connection.html
+++ b/arduino-connection.html
@@ -91,7 +91,7 @@
       on-error="_errorResponse">
     </iron-ajax>
     <div>
-      <h2>Para probar la opcion beta de Lcd pulse</h2>
+      <h2>Para probar la opcion beta de Lcd pulsar</h2>
       <paper-button on-tap="show" class="bet" id="probar" >Beta</paper-button>
       <paper-button on-tap="hidden" id="ocultar">Cerrar beta</paper-button>
     </div>
