--- a/arduino-connection.html
+++ b/arduino-connection.html
@@ -10,14 +10,14 @@
       }
      .container {
         background-size: var(--button--background-size,cover);
-        padding: 20px;
+        padding: var(--container-padding,20px);
         display: block;
       
       }
 
       .led-box {
-        height: 30px;
-        width: 25%;
+        height: var(--ledbox-height,30px);
+        width: var(--ledbox-with,25%);
         margin: 10px 0;
         float: left;
       }
