--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,7 @@
       <h3>demo arduino-element</h3>
       <demo-snippet>
         <template>
-          <arduino-connection></arduino-connection>
+          <arduino-connection url="http://localhost:3000/led/red"></arduino-connection>
         </template>
       </demo-snippet>
     </div>
