quito console.log y agrego mas variables a los estilos

--- a/arduino-connection.html
+++ b/arduino-connection.html
@@ -123,31 +123,33 @@
      *and sends a signal to turn on or off any material to connect
      *Example:
      * <arduino-connection></arduino-connection>
-     * ##Properties
+     *###Properties
      * 
-     |   Properties           Value                      Description
-     | ---------------|------------------|---------------------------------------------------|
-     |      url                ""              define la url for request of the arduino
-     *      lcd                ""              define the paragraph to write on the lcd
+     | Properties | Value | Description          |
+     |------------|-------|----------------------|
+     | url        | ""    | define url           |
+     | lcd        | ""    | define the paragraph |
      * 
      * 
-     * ### Events
+     *### Events
      *
-     |        Event                             Descriptionof event
-     |-------------------|--------------------------------------------------------------------|
-     |    led-change       changes the element of the arduino selected, in this case led-red
-     *    led-change       changes the element of the arduino selected, in this case led-green
-     *   lcd-clicked       print on the lcd screen what you wrote in the text field
+     | Event       | Description of event                                             |
+     |-------------|------------------------------------------------------------------|
+     | led-change  | changes the element the arduino selected, in this case led-red   |
+     | led-change  | changes the element the arduino selected, in this case led-green |
+     | lcd-clicked | print on the lcd screen what you wrote in the text field         |
      * 
-     * ###Styles
-     * 
-     * 
-     *       Name                |       Type        |             Use in case
-     * ----------------------------------------------------------------------------------------------------------------
-     *`  --arduino-led1-style           Mixin             change  style for led1 `
-     *`  --arduino-led2-style           Mixin             change  style for led2 `
-     *`  --arduino-element-style        Mixin             change style for lcd `
-     *`  --button--background-size      var               change style for background-size in the conyeiner elemnts `
+     *### Styles
+     *
+     | Name                      | Type  | Use in case                                               |
+     |---------------------------|-------|-----------------------------------------------------------|
+     | -arduino-led1-style       | Mixin | change  style for led1                                    |
+     | --arduino-led2-style      | Mixin | change  style for led2                                    |
+     | --arduino-element-style   | Mixin | change style for lcd                                      |
+     | --button--background-size | var   | change style for background-size in the conteiner elemnts |
+     | --container-padding       | var   | change padding for container  buttons                     |
+     | --ledbox-height           | var   | change heigh for led                                      |
+     | --ledbox-with             | var   | change with for led                                       |
      * 
      * 
      * @customElement
@@ -170,7 +172,6 @@
       }
       high(){
         this.set("url",'http://localhost:3000/green');
-        console.log(this.url);
         this.dispatchEvent(new CustomEvent("led-change",{
         bubbles:false,
         composed:false,
@@ -180,7 +181,6 @@
       }
       low(){
         this.set("url",'http://localhost:3000/led/red');
-        console.log(this.url);
         this.dispatchEvent(new CustomEvent("led-change",{
           bubbles:false,
           composed:false,
@@ -191,7 +191,6 @@
 
       lcd(){
         this.set("url",'http://localhost:3000/lcd/'+this.lcd);
-        console.log(this.url);
         this.dispatchEvent(new CustomEvent("lcd-clicked",{
           bubbles:false,
           composed:false,
@@ -203,13 +202,11 @@
 
 
       _getLed(event){
-        console.log(event.detail.response);
-        
+        event.detail.response;
       }
 
       _errorResponse(){
         const error  =this.$.json.lastError;
-        console.log(error);
         this.dispatchEvent(new CustomEvent('arduino-request.error',{
           bubbles: false,
           composed: false,
@@ -218,12 +215,6 @@
           }
         }));
       }
-
-      /* changedLcd(){
-        console.log(this.lcd);
-        this.set("url","http://localhost:3000/lcd/"+this.lcd)
-        this.$.json.generateRequest();
-      } */
 
       show(){
         const showme = this.shadowRoot.querySelector('#beta');
